syntax = "proto3";
package auth;
option go_package = "./common/grpc/pb";

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message SessionRequest {
  string token = 1;
}

message SessionResponse {
  string id = 1;
  string username = 2;
  string email = 3;
}

service GRPCAuth {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Session(SessionRequest) returns (SessionResponse);
}